--- a/gapminder_analysis_demo.Rmd
+++ b/gapminder_analysis_demo.Rmd
@@ -5,14 +5,21 @@ date: "10/4/2015"
 output: html_document
 ---
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+```{r, echo=F}
+#install.packages("dplyr")
 
-```{r}
-summary(cars)
+library(dplyr)
 ```
 
+```{r read-in-data}
+gap.in <- read.table("output//combined_gapMinder.tsv", sep="\t", header=T)
+
+gap.in %>%
+  select(pop, country, continent) %>%
+  group_by(continent) %>%
+  summarise(avg=mean(pop))
+```
 You can also embed plots, for example:
 
 ```{r, echo=FALSE}
