--- a/gapminder_analysis.Rmd
+++ b/gapminder_analysis.Rmd
@@ -4,10 +4,31 @@ author: "Elinor Lichtenberg"
 date: "10/4/2015"
 output: html_document
 ---
-
+We are working with the file combined_gapMinder.tsv.
 ```{r setup, echo=F}
-#Get data & library
+#Get data
 gap.in <- read.table("output//combined_gapMinder.tsv", header=T, sep="\t")
 
-require(dplyr)
+#Load library
+library(dplyr)
+```
+
+The countries in this file are:
+```{r see-countries, echo=FALSE}
+levels(gap.in$country)
+```
+
+```{r limit_countries, echo=FALSE}
+#Pick the 3 countries I want to use
+gap.3 <- filter(gap.in, country %in% c("Brazil", "Guinea", "United States")) %>% droplevels()
+```
+
+There are distinct trends in GDP over time in `r levels(gap.3$country)`
+```{r GDP-plots, echo=FALSE}
+#Plot GDP as a function of year
+par(mfrow=c(1, 3))
+with(filter(gap.3, country=="Brazil"), plot(year, gdpPercap, main="", xlab="Year", ylab="Per capita GDP"))
+with(filter(gap.3, country=="Guinea"), plot(year, gdpPercap, main="Per Capita GDP for Three Countries", xlab="Year", ylab="Per capita GDP"))
+with(filter(gap.3, country=="United States"), plot(year, gdpPercap, main="", xlab="Year", ylab="Per capita GDP"))
+
 ```
